# Portfolio

./: .dockerignore  .gitignore  Dockerfile  README.md  biome.json  changelog.md  package-lock.json  package.json  render.yaml  tsconfig.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
content/posts/: architecture.md  article-draft.md  building-portfolio.md  css-serving-issues.md  dev-notes.md  hello-world.md
docs/: 開発ノート.md
frontend/: index.html  package.json  postcss.config.js  vite.config.js  vitest.config.ts
frontend/src/: App.vue
frontend/src/components/: EducationSection.vue  ExperienceSection.vue  HeroSection.vue
frontend/src/test/: sanity.spec.js  setup.ts
note/: architecture.md  dev-notes.md
public/: tailwind.css
scripts/: build-posts.ts
src/: index.tsx  renderer.tsx  style.css
src/blog/: posts.ts
src/components/: App.tsx  BlogList.tsx  BlogPost.tsx  Home.tsx
